# Azhria_Web_Scraping

./: README.md  db.sqlite3  manage.py  pyproject.toml
Azhria_Web_Scraping/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/services/: pdf_parser.py  web_scraper_service.py
